# Raspberry-Pi-Zero-2-QR-reader-BLE

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
src/rspi_qr_ble/: __init__.py  app.py  ble_gatt_server.py  camera_scanner.py  config.py  qr_buffer.py  scan_gate.py
systemd/: rspi-qr-ble.service
tests/: test_qr_buffer.py  test_scan_gate.py
tools/: ble_tester.py  qr_debug_live.py
