[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rspi-qr-ble"
version = "0.1.0"
description = "Raspberry Pi Zero 2 QR camera reader — BLE GATT server compatible with tote_inbound/tote_outbound"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
